[package]
name = "rustlink"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = "0.8.8"
sysinfo = "0.26.0"
tokio-tungstenite = "0.21"
fastwebsockets = "0.6"
rand = "0.8"
hex = "0.4"
chrono = "0.4"
once_cell = "1.21.3"
regex = "1.12.2"
http = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
byteorder = "1.4.3"
base64 = "0.21.7"
reqwest = { version = "0.12.28", features = [
  "json",
  "rustls-tls",
  "gzip",
  "brotli",
  "deflate",
  "stream",
] }
flate2 = "1.1.5"
brotli = "8.0.2"
async-trait = "0.1"